--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,9 @@
-@import url('https://fonts.loli.net/css2?family=Noto+Sans+SC&display=swap');
-@import url('https://fonts.loli.net/css2?family=Quicksand:wght@400;600;700&display=swap');
+@import '@fontsource/noto-sans-sc/400.css';
+@import '@fontsource/noto-sans-sc/500.css';
+@import '@fontsource/noto-sans-sc/700.css';
+@import '@fontsource/quicksand/400.css';
+@import '@fontsource/quicksand/600.css';
+@import '@fontsource/quicksand/700.css';
 @import 'tailwindcss';
 @import 'fumadocs-ui/css/ocean.css';
 @import 'fumadocs-ui/css/preset.css';
