--- a/app/css/font.css
+++ b/app/css/font.css
@@ -168,15 +168,15 @@ button[aria-controls^="radix-"] {
 
 
 .fd-header__brand {
-  font-family: 'quicksand.light-regular';
+  font-family: 'quicksand';
   letter-spacing: 0.04em;
 }
 
 /* 精确匹配整个class字符串 */
-a[class="inline-flex items-center gap-2.5 font-semibold"] {
-  font-family: 'quicksand.light-regular';
+/* a[class="inline-flex items-center gap-2.5 font-semibold"] {
+  font-family: 'quicksand';
   font-size: 20px;
-}
+} */
 
 
 /* 暗色模式支持 - 让原有系统处理 */
