--- a/app/css/font.css
+++ b/app/css/font.css
@@ -41,7 +41,7 @@ h4 {
 }
 
 /* 段落样式 */
-li,p, span,code,pre {
+li,p, span,code,pre,dd,dt {
   font-size: var(--base-size);
   line-height: 1.8;
 }
@@ -138,6 +138,13 @@ button[aria-controls^="radix-"] {
   content: "目录";
   font-size: 18px;
 }
+/* 精确匹配整个class字符串，导航栏标题 */
+a[class="inline-flex items-center gap-2.5 font-semibold"] {
+  font-family: 'quicksand';
+  font-size: 20px;
+}
+
+
 
 /* 响应式调整 */
 @media (max-width: 768px) {
@@ -157,16 +164,6 @@ button[aria-controls^="radix-"] {
     font-size: calc(var(--base-size) * 1.125);
   }
 }
-
-
-
-
-/* 精确匹配整个class字符串，导航栏标题 */
-a[class="inline-flex items-center gap-2.5 font-semibold"] {
-  font-family: 'quicksand';
-  font-size: 20px;
-}
-
 
 /* 暗色模式支持 - 让原有系统处理 */
 @media (prefers-color-scheme: dark) {
